manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    name: timerboard-routes
  name: timerboard-routes
  namespace: default
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      name: timerboard-routes
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        name: timerboard-routes
    spec:
      containers:
      - image: andimiller/timerboard-net-routefinder:0.2
        imagePullPolicy: Always
        livenessProbe:
          failureThreshold: 3
          httpGet:
            path: /metrics
            port: 8080
            scheme: HTTP
          initialDelaySeconds: 15
          periodSeconds: 10
          successThreshold: 1
          timeoutSeconds: 1
        name: timerboard-net-routes
        ports:
        - containerPort: 8080
          protocol: TCP
