manifests/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: timerboard-routes
  namespace: default
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8080
  selector:
    name: timerboard-routes
  type: ClusterIP
